# intelligence-platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_expand_commodity_categories.py
backend/: main.py  seed_data.py
backend/api/: schemas.py
backend/api/routes/: analytics.py  commodities.py  dashboard.py  intelligence.py  landed_cost.py  news.py  notifications.py  reports.py  suppliers.py  sync.py  webhooks.py
backend/core/: config.py  database.py  logging.py
backend/models/: __init__.py  alert.py  alert_config.py  commodity.py  currency.py  insight.py  inventory.py  landed_cost.py  news.py  product.py  supplier.py
backend/services/ai_engine/: ai_client.py  competitor_monitor.py  demand_forecaster.py  intelligence_engine.py  margin_analyzer.py  scenario_engine.py
backend/services/erp_integration/: erp_client.py  webhook_handler.py
backend/services/market_data/: commodity_analytics.py  commodity_tracker.py  currency_tracker.py  forex_connector.py  fred_connector.py  imf_connector.py  landed_cost_calculator.py  morning_brief.py  port_tracker.py  price_forecaster.py  real_connectors.py
backend/services/news/: geopolitical_overlay.py  rss_fetcher.py
backend/tasks/: scheduler.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/api/: test_health.py
tests/services/: test_price_forecaster.py  test_risk_analyzer.py
(+30 files in other folders)
